package Creational.Singleton.Ex2;

public enum Candidate {
  TRUMP,BIDEN;
}
