@startuml
'https://plantuml.com/sequence-diagram
enum Candidate


class Election{
-{static} Election instance
-int trump, biden
-Election()
+{static} Election getInstance()
+void vote
}
class User{
-String name
+void vote(Candidate candidate,String userName)
}
User ..> Election
MainVote --> User
note right of User::vote
1.Tao mot instance cua Election
2.Goi phuong thuc bau vote tren instance de bau chon
end note
note left of Election
day la lop singleton
end note
@enduml
